[package]
name = "expy"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/nandium/expy"
description = "An Excel to Python transpiler written in Rust for WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.108"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory"]

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1      # Better optimization
strip = true           # Strip symbols
